# media-player-ui

./: .prettierignore  components.d.ts  eslint.config.js  package-lock.json  package.json  test-rust.cjs  vite.config.mjs
electron/: main.cjs  preload.js
native/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
native/.github/workflows/: CI.yml
native/src/: lib.rs
src/: App.vue
src/components/VideoPlayer/: MediaControls.vue  SpeedControl.vue  SubtitleOverlay.vue  VideoPlayer.vue
