[package]
edition = "2021"
name = "native"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
libmpv-sys = "3.1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
napi-build = "2.0.1"
pkg-config = "0.3"

[profile.release]
lto = true
strip = "symbols"
napi-build = "2.0"
